# Rdvtr

./: .gitignore  CMakeLists.txt  README.md
cmake/: Core.cmake  Core.cmake.hpp  cmake.hpp
include/Rdvtr/: Ansi.h  Rndr.h  Rndr.hpp
src/: Ansi.c  Rndr.c  Rndr.cpp
test/: AnsiTest.c  AnsiTest.cc  RndrTest.c  RndrTestWithList.cc  RndrTestWithListNonHpp.cc  Sdl2Test.c  SortTest.cc
